--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,7 @@ ul, a {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    color: #2e2f42;
 }
 
 .advantage_text {
@@ -118,6 +119,7 @@ ul, a {
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    color: #2e2f42;
 }
 
 .member {
