--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,13 @@ body {
     font-family: "Roboto", sans-serif;
     color: #434455;;
     background-color: #ffffff;
-    list-style-type: none;
-    text-decoration: none;
 }
 
-ul, a {
-    list-style-type: none;text-decoration: none;
+ul {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
 }
 
 .header_logo {
@@ -66,7 +67,6 @@ ul, a {
 }
 
 .main_title {
-    font-family: "Roboto";
     font-size: 56px;
     color:#ffffff;
     line-height: 1.07;
@@ -92,7 +92,6 @@ ul, a {
 }
 
 .advantage {
-    font-family: "Roboto";
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -101,9 +100,7 @@ ul, a {
 }
 
 .advantage_text {
-    font-family: "Roboto";
     font-size: 16px;
-    color: #434455;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
@@ -113,7 +110,6 @@ ul, a {
 }
 
 .section_name {
-    font-family: "Roboto", bold;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -127,7 +123,6 @@ ul, a {
 }
 
 .name {
-    font-family: "Roboto";
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -136,11 +131,9 @@ ul, a {
 }
 
 .description {
-    font-family: "Roboto";
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
 }
 
 .footer {
@@ -162,7 +155,6 @@ ul, a {
 }
 
 .footer_description {
-    font-family: "Roboto";
     font-size: 16px;
     color: #F4F4FD;
     line-height: 1.5;
